# IB-Registry

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run.sh
config/: db_config.json
sql/: init.sql
src/: main.cpp
src/core/: db_manager.cpp  db_manager.h  domain_types.h
src/gui/: add_company_dialog.cpp  add_company_dialog.h  login_dialog.cpp  login_dialog.h  mainwindow.cpp  mainwindow.h
src/utils/: config_manager.cpp  config_manager.h  logger.cpp  logger.h
